--- a/react-info/src/App.css
+++ b/react-info/src/App.css
@@ -22,3 +22,23 @@ nav {
     color: #DEEBF8;
     font-weight: 600;
 }
+
+.main--container {
+    padding: 57px 27px;
+}
+
+.main--title {
+    margin: 0;
+    font-size: 39px;
+    letter-spacing: -1.953px;
+}
+
+.main--list {
+    margin-top: 46px;
+    max-width: 400px;
+}
+
+.main--list > li {
+    line-height: 19px;
+    padding-block: 10px;
+}
